1.Add exception catch 2. Record url params and taking time